--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-simple-alert": "^1.1.1",
+    "vue-toasted": "^1.1.28",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
